# ompparser

./: .gitignore  AGENTS.md  CMakeLists.txt  CNAME  GEMINI.md  LICENSE  PROGRESS_SUMMARY.md  README.md  SAFETY_REFACTOR.md  app.js  main.cpp  ompparser.cpp  ompparser.js  ompparser.wasm  pr_description.md  preprocess_c.cpp  test_folder.sh  test_openmp_vv.sh  tester.cpp
tests/: CMakeLists.txt  allocate.txt  allocate_fortran.txt  allocator_clause_token_test.cpp  atomic.txt  atomic_fortran.txt  barrier.txt  barrier_fortran.txt  critical.txt  critical_fortran.txt  declare_mapper.txt  declare_mapper_fortran.txt  declare_reduction.txt  declare_simd.txt  declare_simd_fortran.txt  declare_target.txt  declare_target_fortran.txt  distribute.txt  distribute_fortran.txt  distribute_parallel_do_fortran.txt  distribute_parallel_do_simd_fortran.txt  distribute_parallel_for.txt  distribute_parallel_for_simd.txt  distribute_simd.txt  distribute_simd_fortran.txt  do_fortran.txt  do_simd_fortran.txt  end_declare_target.txt  extract_openmp_examples_pragmas.sh  extract_openmp_vv_pragmas.sh  for.txt  for_fortan.txt  for_simd.txt  loop.txt  loop_fortran.txt  main.cpp  master_taskloop.txt  master_taskloop_fortran.txt  master_taskloop_simd.txt  master_taskloop_simd_fortran.txt  (+89 more)
tests/builtin/: allocate.txt  allocate_fortran.txt  atomic_fortran.txt  barrier.txt  barrier_fortran.txt  cancel.txt  cancel_fortran.txt  cancellation_point.txt  cancellation_point_fortran.txt  critical_fortran.txt  declare_mapper.txt  declare_mapper_cplusplus.txt  declare_mapper_fortran.txt  declare_reduction.txt  declare_simd.txt  declare_simd_fortran.txt  declare_variant_fortran.txt  depobj.txt  depobj_fortran.txt  distribute.txt  distribute_fortran.txt  distribute_parallel_do_fortran.txt  distribute_parallel_do_simd_fortran.txt  distribute_parallel_for.txt  distribute_parallel_for_simd.txt  distribute_simd.txt  distribute_simd_fortran.txt  do_fortran.txt  do_simd_fortran.txt  end_declare_target.txt  firstprivate_directive_name_modifier.txt  flush.txt  flush_fortran.txt  for.txt  for_fortan.txt  for_simd.txt  loop.txt  loop_fortran.txt  master_taskloop.txt  master_taskloop_fortran.txt  (+96 more)
tests/openmp_examples/SIMD/: SIMD.1.f90  SIMD.2.c  SIMD.2.f90  SIMD.3.c  SIMD.3.f90  SIMD.4.c  SIMD.4.f90  SIMD.5.c  SIMD.5.f90  SIMD.6.c  SIMD.6.f90  SIMD.7.c  SIMD.7.f90  SIMD.8.c  SIMD.8.f90  linear_modifier.1.cpp  linear_modifier.1.f90  linear_modifier.2.cpp  linear_modifier.2.f90  linear_modifier.3.c  linear_modifier.3.f90
tests/openmp_examples/affinity/: affinity.1.c  affinity.1.f  affinity.2.c  affinity.2.f90  affinity.3.c  affinity.3.f  affinity.4.c  affinity.4.f90  affinity.5.c  affinity.5.f  affinity.6.c  affinity.6.f90  affinity_display.1.c  affinity_display.1.f90  affinity_display.2.c  affinity_display.2.f90  affinity_display.3.c  affinity_display.3.f90  affinity_query.1.c  affinity_query.1.f90
tests/openmp_examples/data_environment/: associate.1.f  associate.2.f  associate.3.f90  associate.4.f90  carrays_fpriv.1.c  copyin.1.c  copyin.1.f  copyprivate.1.c  copyprivate.1.f  copyprivate.2.c  copyprivate.2.f  copyprivate.3.c  copyprivate.3.f  copyprivate.4.f  cpp_reference.1.cpp  default_none.1.c  default_none.1.f  fort_loopvar.1.f90  fort_loopvar.2.f90  fort_sa_private.1.f  fort_sa_private.2.f  fort_sa_private.3.f  fort_sa_private.4.f  fort_sa_private.5.f  fort_shared_var.1.f90  fort_sp_common.1.f  fort_sp_common.2.f  fort_sp_common.3.f  fort_sp_common.4.f  fort_sp_common.5.f  induction.1.c  induction.1.f90  induction.2.cpp  induction.2.f90  lastprivate.1.c  lastprivate.1.f  lastprivate.2.c  lastprivate.2.f90  priv_reduction.1.c  priv_reduction.1.f90  (+68 more)
tests/openmp_examples/devices/: array_sections.1.c  array_sections.1.f90  array_sections.2.c  array_sections.2.f90  array_sections.3.c  array_sections.3.f90  array_sections.4.c  array_sections.4.f90  array_shaping.1.c  array_shaping.1.f90  async_target.1.c  async_target.1.f90  async_target.2.c  async_target.2.f90  async_target.3.c  async_target.3.f90  async_target.4.c  async_target.4.f90  async_target.5.c  async_target.5.f90  declare_target.1.c  declare_target.1.f90  declare_target.2.f90  declare_target.2a.cpp  declare_target.2b_functions.cpp  declare_target.2b_main.cpp  declare_target.2c.cpp  declare_target.3.c  declare_target.3.f90  declare_target.4.c  declare_target.4.f90  declare_target.5.c  declare_target.5.f90  declare_target.6.c  declare_target.6.f90  declare_target.7.c  declare_target.7.f90  declare_target_indirect_call.1.c  declare_target_indirect_call.1.f90  device.1.c  (+87 more)
tests/openmp_examples/directives/: directive_syntax_F_block.1.f90  directive_syntax_F_block.2.f90  directive_syntax_F_fixed_comment.1.f  directive_syntax_F_free_comment.1.f90  directive_syntax_attribute.1.cpp  directive_syntax_attribute.2.cpp  (+1 more)
tests/openmp_vv/: alpaka_complex_template_6.cpp  declare_target_base_and_derived_class_5.cpp  declare_target_base_and_derived_class_8.cpp  declare_target_module_4.F90  declare_target_module_5.F90  declare_target_subroutine_4.F90  gemv_target_4.cpp  gemv_target_many_matrices_4.cpp  gemv_target_many_matrices_6.cpp  gemv_target_many_matrices_8.cpp  gemv_target_many_matrices_9.cpp  gemv_target_reduction_5.cpp  gemv_target_reduction_6.cpp  gemv_target_reduction_9.cpp  gemv_target_teams_dist_par_for_4.cpp  gridmini_map_template_5.cpp  linked_list_6.c  linked_list_8.c  linked_list_9.c  lsms_triangular_packing_4.cpp  lsms_triangular_packing_6.cpp  mmm_target_5.c  mmm_target_parallel_for_simd_5.c  mmm_target_parallel_for_simd_6.c  offloading_success.F90  offloading_success_4.c  qmcpack_target_math_4.c  reduction_separated_directives_10.c  reduction_separated_directives_12.c  reduction_separated_directives_6.c  test_allocate_4.c  test_allocate_allocator_4.c  test_allocate_allocator_5.c  test_allocate_allocator_align_4.c  test_allocate_allocator_align_5.c  test_allocate_on_device_4.c  test_allocate_on_device_5.c  test_assume_absent_4.c  test_assume_contains_4.c  test_assume_holds_4.c  (+1573 more)
wasm/: CMakeLists.txt  ompparser_wasm.cpp
wasm/tests/: run_wasm_builtin_tests.js
web/: app.js  (+2 more)
(+961 files in other folders)
